# mono

./: .bazelrc  .devcontainer.json  .dockerignore  .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  ansible.cfg  bootstrap.md  build_llvm_debug.sh  deps.bzl  go.mod  go.sum  libpg_query.patch  mono.code-workspace
cast/: .gitignore  BUILD.bazel  build_deb.sh  main.go
cast/backend/: BUILD.bazel  prerm.sh
cast/cast-backend_0.0.1-1_arm64/DEBIAN/: control
cast/package/: BUILD.bazel  cast-backend.service  postinst.sh
cast/templates/: list.html  play.html
cast/youtubedl/: README.md  burn_subs.sh  clean_subs.sh
experiments/columnar/: BUILD.bazel  CLAUDE.md  CMakeLists.txt  README.md  columnar-opt.cpp  columnar.code-workspace  configure.sh  execute.cpp  hash_test.cpp  mlir-opt.cpp  parquet.cpp  sql.cpp  translate.cpp
experiments/columnar/include/columnar/: CMakeLists.txt  Catalog.h  Columnar.h  Columnar.td  HashTable.h  Runtime.h  SQLParser.h
experiments/columnar/include/columnar/parquet/: ParquetToCatalog.h
experiments/columnar/include/columnar/runtime/: Allocator.h  ByteArray.h  Hash.h  HashTable.h  PipelineContext.h  Print.h  Scatter.h  TableColumn.h  TableScanner.h  TupleBuffer.h
experiments/columnar/lib/: AddSelectionVectors.cpp  Bufferize.cpp  CMakeLists.txt  Canonicalize.cpp  Catalog.cpp  Columnar.cpp  GroupTableReads.cpp  LLVMTranslation.cpp  LowerOps.cpp  LowerPipelines.cpp  LowerToLLVM.cpp  MakePipelines.cpp  MergeChunks.cpp  PushDownPredicates.cpp  Runtime.cpp  SQLParser.cpp
experiments/columnar/lib/parquet/: ParquetToCatalog.cpp
experiments/columnar/lib/runtime/: Hash.cpp  PipelineContext.cpp  Print.cpp  TableColumn.cpp  TableScanner.cpp  TupleBuffer.cpp
experiments/columnar/parquet/: BUILD.bazel  main.go
experiments/columnar/test/: BUILD.bazel  CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
experiments/columnar/test/add-selection-vectors/: BUILD.bazel  read-select-project.mlir  read.mlir
experiments/columnar/test/bufferize/: read.mlir
experiments/columnar/test/canonicalize/: split-predicate.mlir
experiments/columnar/test/execute/: read.mlir
experiments/columnar/test/ir/: aggregate.mlir  join.mlir  read-lines.mlir  select.mlir  union.mlir
experiments/columnar/test/lower-ops/: read.mlir
experiments/columnar/test/lower-pipelines/: hash-join.mlir  hj.build.mlir  hj.collect.mlir  hj.collect.mlir.mlir  hj.collect.mlir.wip  hj.probe.mlir.wip  read-select-project.mlir  read.mlir
experiments/columnar/test/lower-to-llvm/: read.mlir
experiments/columnar/test/merge-chunks/: read.mlir
experiments/columnar/test/push-down-predicates/: aggregate.mlir  arith.mlir  join.mlir  select.mlir  union.mlir
experiments/columnar/test/query/: example.mlir
experiments/columnar/test/sql/: BUILD.bazel  aggregate.sql  arith.sql  example.sql  join.sql  like.sql  limit.sql  order-by.sql  read.sql  scan.sql  subquery.sql  where.sql
experiments/columnar/test/sql/data/: customer.parquet  gen.sql.notest  lineitem.parquet  nation.parquet  orders.parquet  part.parquet  partsupp.parquet  (+2 more)
experiments/corecompiler/: BUILD.bazel  Core.g4
experiments/dabu/ninja/: .gitignore  CMakeLists.txt  dabu-ninja.cpp  vendor.sh
experiments/dblang/: CMakeLists.txt  configure.sh  main.cpp
experiments/dblang/ir/: README.md
experiments/dblang/parse/: Lexer.cpp  Lexer.h  Lexer.test  LexerTest.cpp  Location.cpp  Location.h  Parser.cpp  Parser.h
experiments/dblang/util/: FileSystem.cpp  FileSystem.h  ReportError.cpp  ReportError.h  Result.h
experiments/dblp/papertinder/abstractscraper/: BUILD.bazel  acm.sh  ieee.sh  main.go
experiments/dblp/papertinder/backend/: BUILD.bazel  main.go  templates.html
experiments/funcfaas/parser/: BUILD.bazel  Brim.g4  sample.brim
experiments/hae/: CMakeLists.txt  README.md  basic.cpp  bytewise.cpp  configure.sh  gen.cpp  legal_words.cpp  lut32.cpp  machine.cpp  submit.cpp  word_freq.cpp
experiments/hae/include/: InputGen.h  LegalWords.h  hash32.h
experiments/hae/lib/: CMakeLists.txt  InputGen.cpp  LegalWords.cpp
experiments/hae/probes/: word_freq_32.txt  word_freq_64.txt
experiments/hae/refimpl/: main.go
experiments/hae/test/: basic.txt
experiments/imdb/imdb-parse/: .gitignore  Cargo.toml
experiments/mlir/dialects/physical_plan/: CMakeLists.txt  configure.sh  llvm-install.sh  physical_plan.code-workspace
experiments/mlir/mlir-scaffold/: BUILD.bazel  README.md  main.go
experiments/mlir/mlir-scaffold/templates/: CMakeLists.txt.template
experiments/parsort/: CMakeLists.txt  README.md  configure.sh  parsort.cpp  test_edges.txt  test_edges_128.txt
experiments/parsort/include/: ChunkDelimited.h
experiments/query/: BUILD.bazel  main.go  main.go.old
experiments/query/engine/: .clang-format  BUILD.bazel  CMakeLists.txt  README.md  configure.sh  configure_release.sh  engine.code-workspace  main.cpp  perf.md
experiments/query/engine/cli/: CMakeLists.txt  main.cpp
experiments/query/engine/data/: person.csv
experiments/query/engine/lib/: CMakeLists.txt
experiments/query/engine/queries/: tpch01.mlir
experiments/query/engine/query-opt/: CMakeLists.txt  query-opt.cpp
experiments/query/sqlite/: BUILD.bazel  conn.go  database_header.go  page_header.go  table_scanner.go  table_scanner_test.go  varint.go
experiments/query/sqlite/driver/: BUILD.bazel  main.go
experiments/superg/: .gitignore  BUILD.bazel  Cargo.toml  README.md  build.rs
experiments/superg/benches/: bench.rs  benchmarks.rs  miranda.rs
experiments/superg/doc/paper/: .gitignore  paper.tex  references.bib  zotero.bib
experiments/superg/mirabench/: reduce-bench.patch
experiments/superg/src/: ast.rs  bracket.rs  compiled_expr.rs  kiselyov.rs  lexer.rs  lib.rs  parser.rs
experiments/superg/src/kiselyov/: lazy.rs  lazy_opt.rs  linear.rs  mod.rs  strict.rs
experiments/superg/src/tigre/: comb.rs  jit.rs  mod.rs
experiments/superg/src/turner/: macros.rs  mod.rs
experiments/superg/tests/: integration.rs  turner.rs
experiments/watcher/: BUILD.bazel  README.md  main.go
pimage/: BUILD.bazel  pimage.sh
(+443 files in other folders)
