# Golang
bazel_dep(name = "rules_go", version = "0.39.1")
bazel_dep(name = "gazelle", version = "0.31.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_oracle_oci_go_sdk_v65",
)

# Packaging rules (deb)
bazel_dep(name = "rules_pkg", version = "0.9.1")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

bazel_dep(name = "libpg_query")
archive_override(
    module_name = "libpg_query",
    urls = ["https://github.com/pganalyze/libpg_query/archive/refs/tags/17-6.0.0.tar.gz"],
    strip_prefix = "libpg_query-17-6.0.0",
    patches = ["libpg_query.patch"],
    patch_strip = 1,
    integrity = "sha256-mM9hjslFldUwxf3/Icd8skAxh/1mCZOuq0rXPKBrur0=",
)
