load("//rules:shell.bzl", "sh_binary")

sh_binary(
    name = "pimage",
    srcs = ["pimage.sh"],
    data = [
        "@raspberry_pi_os_lite//file",
        "@system-bin//:openssl",
    ],
    env = {
        "IMAGE": "$(location @raspberry_pi_os_lite//file)",
        "OPENSSL": "$(location @system-bin//:openssl)",
    },
)
