load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes")
load("@rules_pkg//:mappings.bzl", "pkg_files")
load("@rules_go//go:def.bzl", "go_cross_binary")

go_cross_binary(
    name = "cast_arm64",
    platform = "@rules_go//go/toolchain:linux_arm64",
    target = "//cast",
)

pkg_files(
    name = "binary",
    srcs = [
        ":cast_arm64",
    ],
    attributes = pkg_attributes(
        group = "root",
        mode = "0755",
        owner = "root",
    ),
    renames = {
        ":cast_arm64": "cast-backend",
    },
)

pkg_tar(
    name = "binary_tar",
    srcs = [":binary"],
    package_dir = "/usr/bin",
)

pkg_tar(
    name = "systemd_tar",
    srcs = [
        "cast-backend.service",
    ],
    package_dir = "/usr/lib/systemd/system",
)

pkg_tar(
    name = "debian_data",
    extension = "tar.gz",
    deps = [
        ":binary_tar",
        ":systemd_tar",
    ],
)

pkg_deb(
    name = "package",
    architecture = "arm64",
    data = ":debian_data",
    description = "Backend for media casting server",
    maintainer = "Daan de Graaf <daandegraaf9@gmail.com>",
    package = "cast-backend",
    postinst = "postinst.sh",
    prerm = "prerm.sh",
    version = "0.0.1",
)
