load("@rules_antlr//antlr:antlr4.bzl", "antlr")

antlr(
    name = "parser",
    srcs = ["Core.g4"],
    package = "dev.wildarch.corecompiler",
    visibility = ["//visibility:public"],
    visitor = True,
)

java_library(
    name = "Core",
    srcs = [":parser"],
    visibility = ["//visibility:public"],
    deps = ["@antlr4_runtime//jar"],
)
