load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "query_lib",
    srcs = ["main.go"],
    importpath = "github.com/wildarch/mono/experiments/query",
    visibility = ["//visibility:private"],
    deps = [
        "//experiments/query/sqlite",
    ],
)

go_binary(
    name = "query",
    embed = [":query_lib"],
    visibility = ["//visibility:public"],
)
