load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

rust_library(
    name = "superg",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [":build_script"],
)

rust_test(
    name = "superg_test",
    crate = ":superg",
)

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    edition = "2021",
)
