load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@crate_index//:defs.bzl", "crate_deps")

rust_library(
    name = "superg",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [":build_script"] + crate_deps([
        "libc",
    ]),
)

rust_test(
    name = "superg_test",
    crate = ":superg",
)

rust_test(
    name = "turner_test",
    srcs = ["tests/turner.rs"],
    edition = "2021",
    deps = [":superg"],
)

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    edition = "2021",
)
