load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_test_suite")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@crate_index//:defs.bzl", "crate_deps")

rust_library(
    name = "superg",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [":build_script"] + crate_deps([
        "libc",
    ]),
)

rust_test(
    name = "unit_test",
    crate = ":superg",
)

rust_test_suite(
    name = "integration_test",
    srcs = glob(["tests/**"]),
)

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    edition = "2021",
)
