load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "parquet_lib",
    srcs = ["main.go"],
    importpath = "github.com/wildarch/mono/experiments/columnar/parquet",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_apache_arrow_go_parquet//:parquet",
        "@com_github_apache_arrow_go_parquet//file",
        "@com_github_apache_arrow_go_parquet//schema",
    ],
)

go_binary(
    name = "parquet",
    embed = [":parquet_lib"],
    visibility = ["//visibility:public"],
)
