[package]
name = "imdb-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Enable debug symbols on release builds.
# This enables analysis with perf.
[profile.release]
debug = 1