load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sqlite",
    srcs = [
        "conn.go",
        "database_header.go",
        "page_header.go",
        "table_scanner.go",
        "varint.go",
    ],
    importpath = "github.com/wildarch/mono/experiments/query/sqlite",
    visibility = ["//visibility:public"],
)

go_test(
    name = "sqlite_test",
    srcs = ["table_scanner_test.go"],
    deps = [
        ":sqlite",
        "@org_modernc_sqlite//:sqlite",
    ],
)
