load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "abstractscraper_lib",
    srcs = ["main.go"],
    importpath = "github.com/wildarch/mono/experiments/dblp/papertinder/abstractscraper",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_andybalholm_cascadia//:cascadia",
        "@com_github_chromedp_chromedp//:chromedp",
        "@org_golang_x_net//html",
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_binary(
    name = "abstractscraper",
    embed = [":abstractscraper_lib"],
    visibility = ["//visibility:public"],
)
